spacing fix on mobile on the about page

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -110,5 +110,6 @@
   }
   .container.about-page {
     overflow-x: hidden;
+    gap: 2vh;
   }
 }
